# LeishAI

./: .gitignore  README.md
backend/: .coverage  docker-compose.yml  pyproject.toml
backend/alembic/: README.en.md  README.md  README.pt.md  env.py
backend/alembic/versions/: 15b1870dd74c_add_owner_and_animal_models.py  1e694734fd2c_add_breed_model_and_link_to_animal.py  469a81334c6a_update_assessment_model_with_new_enums_.py  53bf8d2f70e6_create_user_table.py  b2466947b8b8_set_default_value_of_is_active_to_false_.py  eacef602c000_add_role_model_and_fields_to_user.py  fe8353f6c31b_add_full_name_and_institution_to_user_.py
backend/app/services/: openai_service.py
backend/ml_models/: leish_model_v1.joblib  training_columns_v2.joblib
backend/scripts/: seed.py
backend/scripts/seeds/: seed_breeds.py  seed_from_csv.py  seed_users.py
backend/src/: main.py
backend/src/api/v1/: dependencies.py  router_animals.py  router_assessments.py  router_auth.py  router_breeds.py  router_owners.py  router_prediction.py  router_roles.py  router_users.py
backend/src/core/: config.py  limiter.py  security.py
backend/src/db/: crud.py  database.py  models.py
backend/src/db/crud/: crud_animal.py  crud_assessment.py  crud_breed.py  crud_owner.py  crud_role.py  crud_user.py
backend/src/db/models/: __init__.py  animal.py  assessment.py  breed.py  enums.py  owner.py  role.py  user.py
backend/src/ml/: prediction_service.py
backend/src/schemas/: animal.py  assessment.py  auth.py  breed.py  owner.py  prediction.py  role.py  user.py
backend/src/services/: email.py
backend/tests/: conftest.py  test_main.py  test_users_db.py
backend/tests/api/: test_animals_api.py  test_assessments_api.py  test_auth_api.py  test_breeds_api.py  test_owners_api.py  test_prediction_api.py  test_users_api.py  test_utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  i18n.js  main.jsx
frontend/src/components/: Footer.jsx  Header.jsx  LanguageSwitcher.jsx  LoginForm.jsx  Logout.jsx  PredictionForm.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/locales/en/: translation.json
frontend/src/locales/es/: translation.json
frontend/src/locales/pt/: translation.json
frontend/src/pages/: AboutPage.jsx  AdminUsersPage.jsx  ForgotPasswordPage.jsx  HomePage.jsx  LoginPage.jsx  PredictionPage.jsx  ProfilePage.jsx  RegisterPage.jsx  ResetPasswordPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: About.css  AdminUsers.css  App.css  Footer.css  ForgotPassword.css  Header.css  LoginForm.css  LoginPage.css  PredictionForm.css  Profile.css
ia_model/: pyproject.toml
ia_model/models/: data_scaler_v2.joblib  leish_model_v1.joblib  leish_model_v2.joblib  training_columns_v1.joblib
ia_model/notebooks/: 001_0_decision_tree.ipynb  001_1_decision_tree_smote.ipynb  001_2_decision_tree_modficado.ipynb  002_RandomForest.ipynb  003_LightGBM.ipynb  004_RedesNeurais.ipynb  005_RegressaoLogistica.ipynb  005_RegressaoLogistica_SMOTE.ipynb  006_comparacao_modelos.ipynb  007_final_model_training.ipynb  01-EDA.ipynb  02-Model_Training.ipynb  03-Advanced_Imbalanced_Learning.ipynb  04-Undersampling_Experiment.ipynb  05-SVM_Experiments.ipynb  06-ADASYN_Experiment.ipynb  07-Ensemble_Techniques.ipynb  08-Final_Model_Saving.ipynb  V1_01-Final_Model.ipynb
ia_model/notebooks/workflow/: 01_RandomForest.ipynb
