[project]
name = "backend"
version = "0.1.0"
description = "API for LeishAI Project"
authors = [
    {name = "Marcelo Pontes Rodrigues",email = "infopontes@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "poethepoet (>=0.37.0,<0.38.0)"
]

[tool.poe.tasks]
# Comando para rodar o servidor em modo de desenvolvimento
dev = "uvicorn main:app --reload"

# Comando para rodar o servidor em modo de "produção"
start = "uvicorn main:app --host 0.0.0.0"