[project]
name = "backend"
version = "0.1.0"
description = "API for LeishAI Project"
authors = [
    {name = "Marcelo Pontes Rodrigues",email = "infopontes@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "poethepoet (>=0.37.0,<0.38.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.13.2,<0.14.0)"
]

[tool.poe.tasks]
# Comando para rodar o servidor em modo de desenvolvimento
dev = "uvicorn src.main:app --reload"

# Comando para rodar o servidor em modo de "produção"
start = "uvicorn src.main:app --host 0.0.0.0"